--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 		<p class="package-subtitle" style="text-align: center;">Choose Your Perfect Package</p>
 		<div class="package-grid">
 			<!-- Package 1 -->
-			<div class="package-item"><a href="#" data-image="img/package/1_rakaman_berduwa.png" class="see-more">
-				<img src="img/package/1_rakaman_berduwa.png" alt="Rakaman Berduwa Package" class="package-image"></a>
+			<div class="package-item"><a href="#" data-image="package/1_rakaman_berduwa.png" class="see-more">
+				<img src="package/1_rakaman_berduwa.png" alt="Rakaman Berduwa Package" class="package-image"></a>
 				<div class="package-details">
 					<h3>Rakaman Berduwa</h3>
 					<p>"A timeless photography package for couples celebrating their akad, sanding, tandang, or
@@ -168,8 +168,8 @@
 				</div>
 			</div>
 			<!-- Package 2 -->
-			<div class="package-item"><a href="#" data-image="img/package/2_maharani.png" class="see-more">
-				<img src="img/package/2_maharani.png" alt="Maharani Package" class="package-image"></a>
+			<div class="package-item"><a href="#" data-image="package/2_maharani.png" class="see-more">
+				<img src="package/2_maharani.png" alt="Maharani Package" class="package-image"></a>
 				<div class="package-details">
 					<h3>Maharani</h3>
 					<p>"Perfect for couples celebrating two events on the same day, ensuring every cherished moment is
@@ -177,32 +177,32 @@
 				</div>
 			</div>
 			<!-- Package 3 -->
-			<div class="package-item"><a href="#" data-image="img/package/3_candra_senja.png" class="see-more">
-				<img src="img/package/3_candra_senja.png" alt="Candra Senja Package" class="package-image"></a>
+			<div class="package-item"><a href="#" data-image="package/3_candra_senja.png" class="see-more">
+				<img src="package/3_candra_senja.png" alt="Candra Senja Package" class="package-image"></a>
 				<div class="package-details">
 					<h3>Candra Senja</h3>
 					<p>"Capture the magic of your special moments with our photography, perfect for intimate gatherings and ceremonies."</p>
 				</div>
 			</div>
 			<!-- Package 4 -->
-			<div class="package-item"><a href="#" data-image="img/package/4_jumantara.png" class="see-more">
-				<img src="img/package/4_jumantara.png" alt="Jumantara Package" class="package-image"></a>
+			<div class="package-item"><a href="#" data-image="package/4_jumantara.png" class="see-more">
+				<img src="package/4_jumantara.png" alt="Jumantara Package" class="package-image"></a>
 				<div class="package-details">
 					<h3>Jumantara</h3>
 					<p>"Ideal for capturing the essence of your special moments across multiple days."</p>
 				</div>
 			</div>
 			<!-- Package 5 -->
-			<div class="package-item"><a href="#" data-image="img/package/5_mahkota_berduwa.png" class="see-more">
-				<img src="img/package/5_mahkota_berduwa.png" alt="Mahkota Berduwa Package" class="package-image"></a>
+			<div class="package-item"><a href="#" data-image="package/5_mahkota_berduwa.png" class="see-more">
+				<img src="package/5_mahkota_berduwa.png" alt="Mahkota Berduwa Package" class="package-image"></a>
 				<div class="package-details">
 					<h3>Mahkota Berduwa</h3>
 					<p>"It’s perfect for capturing every detail of your multi-event celebration."</p>
 				</div>
 			</div>
 			<!-- Package 6 -->
-			<div class="package-item"><a href="#" data-image="img/package/6_laksara.png" class="see-more">
-				<img src="img/package/6_laksara.png" alt="Laksara Package" class="package-image"></a>
+			<div class="package-item"><a href="#" data-image="package/6_laksara.png" class="see-more">
+				<img src="package/6_laksara.png" alt="Laksara Package" class="package-image"></a>
 				<div class="package-details">
 					<h3>Laksara</h3>
 					<p>"Capture the magic of your Akad, Sanding, and Tandang with our photo and video package, preserving every moment in
@@ -210,16 +210,16 @@
 				</div>
 			</div>
 			<!-- Package 7 -->
-			<div class="package-item"><a href="#" data-image="img/package/7_supplementary.png" class="see-more">
-				<img src="img/package/7_supplementary.png" alt="Supplementary Package" class="package-image"></a>
+			<div class="package-item"><a href="#" data-image="package/7_supplementary.png" class="see-more">
+				<img src="package/7_supplementary.png" alt="Supplementary Package" class="package-image"></a>
 				<div class="package-details">
 					<h3>Supplementary</h3>
 					<p>"Enhance your photography with our customizable supplementary services, ensuring every moment is captured perfectly."</p>
 				</div>
 			</div>
 			<!-- Package 8 -->
-			<div class="package-item"><a href="#" data-image="img/package/8_photo_album.png" class="see-more">
-				<img src="img/package/8_photo_album.png" alt="Photo Album Package" class="package-image"></a>
+			<div class="package-item"><a href="#" data-image="package/8_photo_album.png" class="see-more">
+				<img src="package/8_photo_album.png" alt="Photo Album Package" class="package-image"></a>
 				<div class="package-details">
 					<h3>Photo Album</h3>
 					<p>"Preserve your memories with our elegant photo albums, perfect for showcasing life's special moments."</p>
