--- a/gallery.html
+++ b/gallery.html
@@ -65,93 +65,93 @@
         <div class="portfolio-grid">
             <!-- Large Image -->
             <div class="portfolio-item medium">
-                <img src="img/portfolio/wedding1.jpg" alt="Portfolio 1">
+                <img src="portfolio/wedding1.jpg" alt="Portfolio 1">
             </div>
             <!-- Small Image -->
             <div class="portfolio-item small">
-                <img src="img/portfolio/wedding7.jpg" alt="Portfolio 2">
+                <img src="portfolio/wedding7.jpg" alt="Portfolio 2">
             </div>
             <!-- Small Images -->
             <div class="portfolio-item small">
-                <img src="img/portfolio/wedding6.jpg" alt="Portfolio 3">
+                <img src="portfolio/wedding6.jpg" alt="Portfolio 3">
             </div>
             <div class="portfolio-item medium">
                 <img src="img/portfolio/wedding8.jpg" alt="Portfolio 4">
             </div>
             <!-- Large Image -->
             <div class="portfolio-item medium">
-                <img src="img/portfolio/wedding2.jpg" alt="Portfolio 5">
+                <img src="portfolio/wedding2.jpg" alt="Portfolio 5">
             </div>
             <!-- Small Image -->
             <div class="portfolio-item large">
-                <img src="img/portfolio/port1/wedding1.jpg" alt="Portfolio 6">
+                <img src="portfolio/port1/wedding1.jpg" alt="Portfolio 6">
             </div>
             <!-- Small Images -->
             <div class="portfolio-item medium">
-                <img src="img/portfolio/port1/wedding2.jpg" alt="Portfolio 7">
+                <img src="port1/wedding2.jpg" alt="Portfolio 7">
             </div>
             <div class="portfolio-item medium">
-                <img src="img/portfolio/port1/wedding3.jpg" alt="Portfolio 8">
+                <img src="port1/wedding3.jpg" alt="Portfolio 8">
             </div>
             <!-- Large Image -->
             <div class="portfolio-item medium">
-                <img src="img/portfolio/port1/wedding4.jpg" alt="Portfolio 9">
+                <img src="port1/wedding4.jpg" alt="Portfolio 9">
             </div>
             <!-- Small Image -->
             <div class="portfolio-item small">
-                <img src="img/portfolio/port1/wedding5.jpg" alt="Portfolio 10">
+                <img src="port1/wedding5.jpg" alt="Portfolio 10">
             </div>
             <!-- Small Images -->
             <div class="portfolio-item small">
-                <img src="img/portfolio/port1/wedding6.jpg" alt="Portfolio 11">
+                <img src="port1/wedding6.jpg" alt="Portfolio 11">
             </div>
             <!-- Large Image -->
             <div class="portfolio-item medium">
-                <img src="img/portfolio/port1/tandang2.jpg" alt="Portfolio 13">
+                <img src="port1/tandang2.jpg" alt="Portfolio 13">
             </div>
             <!-- Small Image -->
             <div class="portfolio-item small">
-                <img src="img/portfolio/port1/tandang13.jpg" alt="Portfolio 14">
+                <img src="port1/tandang13.jpg" alt="Portfolio 14">
             </div>
             <!-- Small Images -->
             <div class="portfolio-item small">
-                <img src="img/portfolio/port1/tandang7.jpg" alt="Portfolio 15">
+                <img src="port1/tandang7.jpg" alt="Portfolio 15">
             </div>
             <div class="portfolio-item medium">
-                <img src="img/portfolio/port1/tandang1.jpg" alt="Portfolio 16">
+                <img src="port1/tandang1.jpg" alt="Portfolio 16">
             </div>
             <!-- Large Image -->
             <div class="portfolio-item medium">
-                <img src="img/portfolio/port1/tandang10.jpg" alt="Portfolio 17">
+                <img src="port1/tandang10.jpg" alt="Portfolio 17">
             </div>
             <!-- Small Image -->
             <div class="portfolio-item small">
-                <img src="img/portfolio/port1/tandang5.jpg" alt="Portfolio 18">
+                <img src="port1/tandang5.jpg" alt="Portfolio 18">
             </div>
             <!-- Small Images -->
             <div class="portfolio-item small">
-                <img src="img/portfolio/port1/tandang4.jpg" alt="Portfolio 19">
+                <img src="port1/tandang4.jpg" alt="Portfolio 19">
             </div>
             <div class="portfolio-item medium">
-                <img src="img/portfolio/port1/nikah8.jpg" alt="Portfolio 20">
+                <img src="port1/nikah8.jpg" alt="Portfolio 20">
             </div>
             <!-- Large Image -->
             <div class="portfolio-item medium">
-                <img src="img/portfolio/port1/nikah5.jpg" alt="Portfolio 21">
+                <img src="port1/nikah5.jpg" alt="Portfolio 21">
             </div>
             <!-- Small Image -->
             <div class="portfolio-item small">
-                <img src="img/portfolio/port1/nikah4.jpg" alt="Portfolio 22">
+                <img src="port1/nikah4.jpg" alt="Portfolio 22">
             </div>
             <!-- Small Images -->
             <div class="portfolio-item small">
-                <img src="img/portfolio/port1/nikah2.jpg" alt="Portfolio 23">
+                <img src="port1/nikah2.jpg" alt="Portfolio 23">
             </div>
             <div class="portfolio-item medium">
-                <img src="img/portfolio/port1/nikah1.jpg" alt="Portfolio 24">
+                <img src="port1/nikah1.jpg" alt="Portfolio 24">
             </div>
             <div class="portfolio-item medium">
-                <img src="img/portfolio/port1/nikah3.jpg" alt="Portfolio 24">
+                <img src="port1/nikah3.jpg" alt="Portfolio 24">
             </div>
         </div>
     </div>
