--- a/index.html
+++ b/index.html
@@ -131,21 +131,21 @@
 		<div class="portfolio-grid">
 			<!-- Large Image -->
 			<div class="portfolio-item medium">
-				<img src="img/portfolio/wedding1.jpg" alt="Portfolio 1">
+				<img src="portfolio/wedding1.jpg" alt="Portfolio 1">
 			</div>
 			<!-- Small Image -->
 			<div class="portfolio-item small">
-				<img src="img/portfolio/wedding7.jpg" alt="Portfolio 2">
+				<img src="portfolio/wedding7.jpg" alt="Portfolio 2">
 			</div>
 			<!-- Small Images -->
 			<div class="portfolio-item small">
-				<img src="img/portfolio/wedding6.jpg" alt="Portfolio 3">
+				<img src="portfolio/wedding6.jpg" alt="Portfolio 3">
 			</div>
 			<div class="portfolio-item medium">
-				<img src="img/portfolio/wedding8.jpg" alt="Portfolio 4">
+				<img src="portfolio/wedding8.jpg" alt="Portfolio 4">
 			</div>
 			<div class="portfolio-item medium">
-				<img src="img/portfolio/wedding2.jpg" alt="Portfolio 5">
+				<img src="portfolio/wedding2.jpg" alt="Portfolio 5">
 			</div>
 		</div>
 		<div class="button-p">
