--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="about.css">
+    <link rel="stylesheet" type="text/css" href="footer.css">
     <meta name="description"
         content="Therakaman Photography menawarkan perkhidmatan fotografi profesional untuk perkahwinan, tunang, majlis nikah, OOTD, graduasi dan banyak lagi.">
     <meta name="keywords"
@@ -21,7 +22,7 @@
     <div class="responsive-container-block bigContainer">
         <div class="responsive-container-block Container bottomContainer">
             <div class="ultimateImg">
-                <img class="mainImg" src="img/khai2.jpg" alt="Khairul">
+                <img class="mainImg" src="khai2.jpg" alt="Khairul">
             </div>
             <div class="allText bottomText">
                 <p class="text-blk headingText">
