--- a/gallery.html
+++ b/gallery.html
@@ -73,7 +73,7 @@
             </div>
             <!-- Small Images -->
             <div class="portfolio-item medium">
-                <img src="img/portfolio/wedding8.jpg" alt="Portfolio 4">
+                <img src="portfolio/wedding8.jpg" alt="Portfolio 4">
             </div>
             <!-- Large Image -->
             <div class="portfolio-item medium">
@@ -81,7 +81,7 @@
             </div>
             <!-- Small Image -->
             <div class="portfolio-item large">
-                <img src="portfolio/port1/wedding1.jpg" alt="Portfolio 6">
+                <img src="port1/wedding1.jpg" alt="Portfolio 6">
             </div>
             <!-- Small Images -->
             <div class="portfolio-item medium">
