--- a/gallery.html
+++ b/gallery.html
@@ -83,6 +83,9 @@
             <div class="portfolio-item large">
                 <img src="port1/wedding1.jpg" alt="Portfolio 6">
             </div>
+            <div class="portfolio-item large">
+                <img src="port1/wedding2.jpg" alt="Portfolio 6">
+            </div>
             <!-- Small Images -->
             <div class="portfolio-item medium">
                 <img src="port1/wedding3.jpg" alt="Portfolio 8">
