--- a/gallery.html
+++ b/gallery.html
@@ -44,6 +44,36 @@
             text-decoration: none;
             color: inherit;
         }
+
+        /* Navigation Bar */
+.navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background: #151515;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 20px;
+    z-index: 1000;
+}
+
+.nav-links {
+    display: flex;
+    gap: 20px;
+}
+
+
+.navbar a {
+    color: white;
+    font-size: 1rem;
+    transition: color 0.3s ease;
+    padding: 10px;
+}
+
+.navbar a:hover {
+    color: #C0A080;
+}
     </style>
 </head>
 
